feat(api): exposed and regenerated new routes for commands
